--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,7 @@
     "scripts": {
         "budget": "php cli.php"
     },
-    "require": {}
+    "require": {
+        "vlucas/phpdotenv": "^5.6"
+    }
 }
